# UetRobotic

./: CMakeLists.txt  README.md  autorace_2019.world  autorace_20192.world  package.xml
launch/: turtlebot3_autorace_2019.launch
models/turtlebot3_autorace_part/ground_base/: model.config  model.sdf
models/turtlebot3_autorace_part/ground_base/materials/scripts/: ground_base.material
src/: turtlebot3_autorace_driver.cpp
urdf/: turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro
