<?xml version="1.0"?>
<package>
	<name>turtlebot3_autorace_2019</name>
	<description>
		metapakage contain model and simulation
	</description>
	<author>Author</author>
	<maintainer email="vuthinh.UET@gmai.com">Maintainer</maintainer>
	<version>0.0.0</version>
	<license>Apache License 2.0</license>
	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>nav_msgs</build_depend>
	<build_depend>tf</build_depend>
	<build_depend>gazebo_ros</build_depend>
	<build_depend>urdf</build_depend>
	<build_depend>xacro</build_depend>
	<run_depend>gazebo</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>nav_msgs</run_depend>
	<run_depend>tf</run_depend>
	<run_depend>gazebo_ros</run_depend>
	<run_depend>urdf</run_depend>
	<run_depend>xacro</run_depend>
	<export>
		<gazebo_ros gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models:$${prefix}/models/turtlebot3_autorace_2019"/>
	</export>
</package>